--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@wap/core": "git+https://github.com/webassetpack/core.git",
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.1",
+    "nyc": "15.0.1",
     "ts-node": "8.9.0",
     "typescript": "3.8.3"
   },
