--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@types/jasmine": "3.5.10",
     "@typescript-eslint/eslint-plugin": "2.29.0",
     "@typescript-eslint/parser": "2.29.0",
-    "@wap/core": "git+https://github.com/webassetpack/core.git",
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.1",
     "nyc": "15.0.1",
@@ -39,6 +38,7 @@
     "@totalpave/interfaces": "1.0.0",
     "@types/node": "12.12.37",
     "@types/pako": "1.0.1",
-    "pako": "1.0.11"
+    "pako": "1.0.11",
+    "@wap/core": "git+https://github.com/webassetpack/core.git"
   }
 }
