--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/api.js",
   "types": "lib/api.d.ts",
   "scripts": {
-    "build": "npm run lint && tsc",
+    "build": "npm run lint && tsc && rollup -c rollup.config.js",
     "lint": "node ./node_modules/.bin/eslint --ext .ts '?(src|spec)/**/*.ts' --cache",
     "test": "npm run-script lint && nyc --reporter=lcov --reporter=text node -r ts-node/register ./spec/support/jasmine.ts"
   },
@@ -24,6 +24,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@breautek/jasmine": "3.5.1",
+    "@rollup/plugin-commonjs": "11.1.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
+    "@rollup/plugin-typescript": "4.1.1",
     "@totalpave/eslint-plugin": "3.0.1",
     "@types/jasmine": "3.5.10",
     "@typescript-eslint/eslint-plugin": "2.29.0",
@@ -31,6 +34,10 @@
     "eslint": "6.8.0",
     "jasmine-spec-reporter": "5.0.2",
     "nyc": "15.0.1",
+    "rollup": "1.32.1",
+    "rollup-plugin-progress": "1.1.1",
+    "rollup-plugin-sourcemaps": "0.6.1",
+    "rollup-plugin-typescript2": "0.27.0",
     "ts-node": "8.9.0",
     "typescript": "3.8.3"
   },
@@ -38,7 +45,8 @@
     "@totalpave/interfaces": "1.0.0",
     "@types/node": "12.12.37",
     "@types/pako": "1.0.1",
+    "@wap/core": "git+https://github.com/webassetpack/core.git",
     "pako": "1.0.11",
-    "@wap/core": "git+https://github.com/webassetpack/core.git"
+    "tslib": "1.11.2"
   }
 }
