--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es3",
-        "module": "ESNext",
+        "module": "ES2015",
         "declaration": true,
         "sourceMap": true,
         "outDir": "./lib",
