--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wap/runtime",
-  "version": "0.0.0-alpha.0",
+  "version": "0.0.1",
   "description": "Web Asset Packs",
   "main": "lib/api.js",
   "types": "lib/api.d.ts",
